# needful

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  setup.cfg
docs/: conf.py  index.rst  requirements.txt
docs/_static/: custom.css
docs/_themes/sphinx_rtd_theme_jhd/: theme.conf
docs/_themes/sphinx_rtd_theme_jhd/static/css/: custom.css
docs/basics/: index.rst
docs/issues/: index.rst
docs/py_examples/: My First Presentation.html  my_first_presentation.py
docs/styling/: index.rst
needful/: __init__.py  _css.py  _presentation.py  _preview.py  _slide.py
needful/_html_objects/: __init__.py  bokeh_figure.py  grid_object.py  image.py  mpl_figure.py  plotly_figure.py  textbox.py
needful/_slide_mixins/: __init__.py  _plotly_figure.py  images.py  mixin.py  plots.py  textboxes.py
needful/_utils/: __init__.py
needful/static/: default.css  load-bearing.css  needful.js  template.html
