[metadata]
name = needful
url = https://github.com/jhdarcy/needful
version = 0.3a1
author = Jordan D'Arcy
author_email = needful.py@gmail.com
description = needful - simple, lightweight, interactive HTML presentations and dashboards for data scientists
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    needful
    needful._html_objects
    needful._utils
python_requires = >=3.6
include_package_data = True
